# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  How_It_Works.txt  Things_to_implement.txt  Various_Instructions.txt  configuration.yaml  deny.toml  http_req_example.txt  spec.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: explanation.txt  query-63af1192713bddf39e2838af237c8130482c6d56966362e5650bf0efa24a1070.json  query-a664bd647ade5b499753a73f876dfc31ff286f17b8cb09129f55b463a9c695b2.json  query-ed279fc2dda0c3ede3e81a4500fcaa9da2220f8a9ad6c1debc3095deb9f84759.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20241114215304_seed_user.sql  20241116155300_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  newsletter.html  post.rs  style.css
src/routes/admin/password/: get.rs  password.html  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
