[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# these lib and bin are not strictly required if kept to defaults
[lib]
path = "src/lib.rs"

# note double brackets - an array - you can have multiple bins, only 1 lib
# if requiring more lib use a Worspace
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Macro that allows extracting of form data from http POST requests
serde = { version = "1", features = ["derive"] }

# for working with configurations!
config = "0.14"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

# log implementations
#env_logger = "0.9"
#log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# allows for metadata in tracing
tracing-bunyan-formatter = "0.3"
# allows system logs in tracer
tracing-log = "0.2"

# hide certain strings from the log
secrecy = { version = "0.8", features = ["serde"] }

# get logging info from actix_web::Logger
tracing-actix-web = "0.7"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
"runtime-tokio-rustls", # use tokio for futures
"macros", # very useful!
"postgres", # unlocks postgres specific functionality
"uuid", # uuid integration
"chrono", # timestampz integration
"migrate" # migrate like with sqlx-CLI
]

# for dependencies required for tests only
[dev-dependencies]
reqwest = "0.12"