[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# these lib and bin are not strictly required if kept to defaults
[lib]
path = "src/lib.rs"

# note double brackets - an array - you can have multiple bins, only 1 lib
# if requiring more lib use a Worspace
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Macro that allows extracting of form data from http POST requests
serde = { version = "1", features = ["derive"] }

# for working with configurations!
config = "0.14"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

# log implementations
#env_logger = "0.9"
#log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# allows for metadata in tracing
tracing-bunyan-formatter = "0.3"
# allows system logs in tracer
tracing-log = "0.2"

# hide certain strings from the log
secrecy = { version = "0.8", features = ["serde"] }

# get logging info from actix_web::Logger
tracing-actix-web = "0.7"

#deserialise numbers etc (ie non strings)
serde-aux = "4"

unicode-segmentation = "1"

# email validation
validator = "0.18"

rand = { version = "0.8", features = ["std_rng"] }

# error boilerplate generator
thiserror = "1"
anyhow = "1"

# credentials
base64 = "0.22"
sha3="0.9"
argon2 = { version = "0.5", features = ["std"] }

urlencoding = "2"
htmlescape = "0.3" # encode html

# for HMAC verification of http query source/integrity
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4" # convert HMAC tag back from hex string

# HMAC tags for signing cookies
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }

#sessions
actix-session = { version = "0.10", features = ["redis-session-rustls"] }

serde_json = "1"


regex = "1.11.1"

# http requests
[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
"runtime-tokio-rustls", # use tokio for futures
"macros", # very useful!
"postgres", # unlocks postgres specific functionality
"uuid", # uuid integration
"chrono", # timestampz integration
"migrate" # migrate like with sqlx-CLI
]

# for dependencies required for tests only
[dev-dependencies]
claims = "0.7"
fake = "2.9"
quickcheck = "1.0.3"
quickcheck_macros = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
linkify = "0.10"
serde_urlencoded = "0.7.1"